# text-ui

./: .gitignore  Dockerfile  README.md  app.py  global.py  patient.py  pyproject.toml  utils.py
pages/: exams.py  full_tasy_ui.py  global.py  patient.py  redcap_ui.py  tasy_ui.py  tasy_ui_fuzzy.py
src/: prepare_tasy.py
